--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Practicing CSS Styling</title>
   <link rel="stylesheet" href="styles.css">
+  <style>
+    body {
+      background-color: aqua;
+    }
+    
+  </style>
 </head>
 <body>
 
   <h1 style="color:bisque; background-color: blueviolet; font-size: 50px;">Learning CSS Week 4</h1>
 <img src="/img/pix.jpg" alt="picture of a person" style="width:190px; height:170px; padding: 2%; position: relative;">
-<h4 style="color: red; font-size: 20px; background-color: bisque; padding:15px">Styling: This is what makes your webpages look so beautiful</h4> 
+<h4 style="color: red; font-size: 20px; background-color: bisque; padding:15px;">Styling: This is what makes your webpages look so beautiful</h4> 
 <p style="color:black; font-weight: bold; font-family: sans-serif; background-color: white; font-size: 15px; margin: 10px;" >
     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, eaque? Necessitatibus 
     <br> deleniti omnis aperiam veniam, aut natus quidem maiores. <br> Repellendus, quae
